# provider/grpc/server.go
@@ -1,16 +1,18 @@
 package grpc
 
 import (
-	"context"
 	"fmt"
 	"net"
 	"net/http"
+	"strings"
 
+	"github.com/ovrclk/akash/keys"
 	"github.com/ovrclk/akash/provider/cluster"
 	"github.com/ovrclk/akash/provider/cluster/kube"
 	"github.com/ovrclk/akash/provider/manifest"
 	"github.com/ovrclk/akash/types"
 	"github.com/tendermint/tmlibs/log"
+	"golang.org/x/net/context"
 	"golang.org/x/net/netutil"
 	"google.golang.org/grpc"
 )
@@ -22,37 +24,6 @@ type server struct {
 	network string
 	port    string
 	log     log.Logger
-}
-
-// NewServer network can be "tcp", "tcp4", "tcp6", "unix" or "unixpacket". phandler is the provider cluster handler
-func newServer(log log.Logger, network, port string, handler manifest.Handler, client kube.Client) *server {
-	s := &server{
-		handler: handler,
-		network: network,
-		port:    port,
-		Server:  grpc.NewServer(grpc.MaxConcurrentStreams(2), grpc.MaxRecvMsgSize(500000)),
-		log:     log,
-		Client:  client,
-	}
-	types.RegisterClusterServer(s.Server, s)
-	return s
-}
-
-func (s server) Ping(context context.Context, req *types.Empty) (*types.ServerStatus, error) {
-	return &types.ServerStatus{
-		Code:    http.StatusOK,
-		Message: "OK",
-	}, nil
-}
-
-func (s *server) listenAndServe() error {
-	l, err := net.Listen(s.network, s.port)
-	if err != nil {
-		return err
-	}
-	l = netutil.LimitListener(l, 10)
-	s.log.Info("Running manifest server", "port", s.port, "network", s.network)
-	return s.Server.Serve(l)
 }
 
 func RunServer(ctx context.Context, log log.Logger, network, port string, handler manifest.Handler, client kube.Client) error {
@@ -83,6 +54,13 @@ func RunServer(ctx context.Context, log log.Logger, network, port string, handle
 	return err
 }
 
+func (s server) Status(context context.Context, req *types.Empty) (*types.ServerStatus, error) {
+	return &types.ServerStatus{
+		Code:    http.StatusOK,
+		Message: "OK",
+	}, nil
+}
+
 func (s server) Deploy(context context.Context, req *types.ManifestRequest) (*types.DeployRespone, error) {
 	if err := s.handler.HandleManifest(req); err != nil {
 		return nil, err
@@ -93,7 +71,64 @@ func (s server) Deploy(context context.Context, req *types.ManifestRequest) (*ty
 }
 
 func (s server) LeaseStatus(context context.Context, req *types.LeaseStatusRequest) (*types.LeaseStatusResponse, error) {
-	return &types.LeaseStatusResponse{
-		Services: []*types.LeaseStatus{&types.LeaseStatus{"OK"}},
+	lease, err := keys.ParseLeasePath(strings.Join([]string{req.Deployment, req.Group, req.Order, req.Provider}, "/"))
+	deployments, err := s.Client.KubeDeployments(lease.LeaseID)
+	if err != nil {
+		s.log.Error(err.Error())
+		return nil, types.ErrInternalError{Message: "internal error"}
+	}
+	if deployments == nil {
+		s.log.Error(err.Error())
+		return nil, types.ErrResourceNotFound{Message: "no deployments for lease"}
+	}
+	response := &types.LeaseStatusResponse{}
+	for _, deployment := range deployments.Items {
+		status := &types.LeaseStatus{Name: deployment.Name, Status: fmt.Sprintf("available replicas: %v/%v", deployment.Status.AvailableReplicas, deployment.Status.Replicas)}
+		response.Services = append(response.Services, status)
+	}
+	return response, nil
+}
+
+func (s server) ServiceStatus(context context.Context, req *types.ServiceStatusRequest) (*types.ServiceStatusResponse, error) {
+	lease, err := keys.ParseLeasePath(strings.Join([]string{req.Deployment, req.Group, req.Order, req.Provider}, "/"))
+	deployment, err := s.Client.KubeDeployment(lease.LeaseID, req.Name)
+	if err != nil {
+		s.log.Error(err.Error())
+		return nil, types.ErrInternalError{Message: "internal error"}
+	}
+	if deployment == nil {
+		s.log.Error(err.Error())
+		return nil, types.ErrResourceNotFound{Message: "no deployment for lease"}
+	}
+	return &types.ServiceStatusResponse{
+		ObservedGeneration: deployment.Status.ObservedGeneration,
+		Replicas:           deployment.Status.Replicas,
+		UpdatedReplicas:    deployment.Status.UpdatedReplicas,
+		ReadyReplicas:      deployment.Status.ReadyReplicas,
+		AvailableReplicas:  deployment.Status.AvailableReplicas,
 	}, nil
+}
+
+// NewServer network can be "tcp", "tcp4", "tcp6", "unix" or "unixpacket". phandler is the provider cluster handler
+func newServer(log log.Logger, network, port string, handler manifest.Handler, client kube.Client) *server {
+	s := &server{
+		handler: handler,
+		network: network,
+		port:    port,
+		Server:  grpc.NewServer(grpc.MaxConcurrentStreams(2), grpc.MaxRecvMsgSize(500000)),
+		log:     log,
+		Client:  client,
+	}
+	types.RegisterClusterServer(s.Server, s)
+	return s
+}
+
+func (s *server) listenAndServe() error {
+	l, err := net.Listen(s.network, s.port)
+	if err != nil {
+		return err
+	}
+	l = netutil.LimitListener(l, 10)
+	s.log.Info("Running manifest server", "port", s.port, "network", s.network)
+	return s.Server.Serve(l)
 }
